# ChessAI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Docs/: CONTEXT.md
backend/include/: AIPlayer.hpp  Bishop.hpp  Board.hpp  Game.hpp  GameState.hpp  King.hpp  Knight.hpp  Move.hpp  MoveGenerator.hpp  Pawn.hpp  Piece.hpp  PlayerFactory.hpp  Position.hpp  Queen.hpp  Rook.hpp
backend/include/ai/: Evaluator.hpp  IAIStrategy.hpp  ImitationStrategy.hpp  PieceSquareTables.hpp  RandomMoveStrategy.hpp
backend/src/: AIPlayer.cpp  Bishop.cpp  Board.cpp  Game.cpp  GameState.cpp  King.cpp  Knight.cpp  Move.cpp  Pawn.cpp  Piece.cpp  PlayerFactory.cpp  Position.cpp  Queen.cpp  Rook.cpp  RuleValidator.cpp
backend/src/ai/: ImitationStrategy.cpp  RandomMoveStrategy.cpp
build_release/: .ninja_deps  .ninja_log  build.ninja
build_release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_release/.qt/rcc/: qml_resources.qrc
build_release/ChessAI_autogen/: deps  mocs_compilation.cpp
build_release/ChessAI_autogen/WSCMZZOQ67/: moc_BoardModel.cpp.d  moc_ChessController.cpp.d  moc_GameClock.cpp.d  moc_GameLogger.cpp.d  moc_MatchManager.cpp.d
controllers/: BoardModel.cpp  BoardModel.hpp  ChessController.cpp  ChessController.hpp
controllers/include/: BoardModel.hpp  ChessController.hpp  GameClock.hpp  GameLogger.hpp  MatchManager.hpp
controllers/src/: BoardModel.cpp  ChessController.cpp  GameClock.cpp  GameLogger.cpp  MatchManager.cpp
include/: Bishop.hpp  Board.hpp  Game.hpp  GameState.hpp  HumanPlayer.hpp  King.hpp  Knight.hpp  Move.hpp  MoveGenerator.hpp  Pawn.hpp  Piece.hpp  Player.hpp  Queen.hpp  Rook.hpp  RuleValidator.hpp
src/: Bishop.cpp  Board.cpp  GameState.cpp  HumanPlayer.cpp  King.cpp  Knight.cpp  Move.cpp  MoveGenerator.cpp  Pawn.cpp  Player.cpp  Queen.cpp  Rook.cpp  RuleValidator.cpp
test/: Test_AjedrezPorConsola.cpp  Test_jaqueMatePastor.cpp
ui/: GameView.qml  main.qml
ui/components/game/: ChessBoardUI.qml  ControlPanel.qml  DrawOfferPopup.qml  GameSetupPopup.qml  PromotionPopup.qml  SurrenderPopup.qml
ui/components/shared/: SidebarMenu.qml
ui/views/: GameView.qml  MenuView.qml
